force-app/main/default/objects/Occupational_Series__c/Occupational_Series__c.object-meta.xml
<CustomObject>
    <description>https://www.opm.gov/policy-data-oversight/classification-qualifications/classifying-general-schedule-positions/occupationalhandbook.pdf</description>
    <label>Occupational Series</label>
    <nameField>
        <label>Occupational Series</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Occupational Series</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>