force-app/main/default/objects/Occupational_Series__c/fields/Occupational_Code__c.field-meta.xml
<CustomField>
    <fullName>Occupational_Code__c</fullName>
    <description>Code only</description>
    <label>Occupational Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>