force-app/main/default/objects/Occupational_Series__c/fields/Occupational_Group_or_Family__c.field-meta.xml
<CustomField>
    <fullName>Occupational_Group_or_Family__c</fullName>
    <label>Occupational Group or Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0000 - MISCELLANEOUS OCCUPATIONS</fullName>
            </value>
            <value>
                <fullName>0100 - SOCIAL SCIENCE, PSYCHOLOGY, AND WELFARE</fullName>
            </value>
            <value>
                <fullName>0200 - HUMAN RESOURCES MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>0300 - GENERAL ADMINISTRATIVE, CLERICAL, AND OFFICE SERVICES</fullName>
            </value>
            <value>
                <fullName>0400 - NATURAL RESOURCES MANAGEMENT AND BIOLOGICAL SCIENCES</fullName>
            </value>
            <value>
                <fullName>0500 - ACCOUNTING AND BUDGET</fullName>
            </value>
            <value>
                <fullName>0600 - MEDICAL, HOSPITAL, DENTAL, AND PUBLIC HEALTH</fullName>
            </value>
            <value>
                <fullName>0700 - VETERINARY MEDICAL SCIENCE</fullName>
            </value>
            <value>
                <fullName>0800 - ENGINEERING AND ARCHITECTURE</fullName>
            </value>
            <value>
                <fullName>0900 - LEGAL AND KINDRED</fullName>
            </value>
            <value>
                <fullName>1000 - INFORMATION AND ARTS</fullName>
            </value>
            <value>
                <fullName>1100 - BUSINESS AND INDUSTRY</fullName>
            </value>
            <value>
                <fullName>1200 - COPYRIGHT, PATENT, AND TRADEMARK</fullName>
            </value>
            <value>
                <fullName>1300 - PHYSICAL SCIENCES</fullName>
            </value>
            <value>
                <fullName>1400 - LIBRARY AND ARCHIVES</fullName>
            </value>
            <value>
                <fullName>1500 - MATHEMATICAL SCIENCES</fullName>
            </value>
            <value>
                <fullName>1600 - EQUIPMENT, FACILITIES, AND SERVICES</fullName>
            </value>
            <value>
                <fullName>1700 - EDUCATION</fullName>
            </value>
            <value>
                <fullName>1800 - INSPECTION, INVESTIGATION, ENFORCEMENT, AND COMPLIANCE</fullName>
            </value>
            <value>
                <fullName>1900 - QUALITY ASSURANCE, INSPECTION, AND GRADING</fullName>
            </value>
            <value>
                <fullName>2000 - SUPPLY</fullName>
            </value>
            <value>
                <fullName>2100 - TRANSPORTATION</fullName>
            </value>
            <value>
                <fullName>2200 - INFORMATION MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>2500 - WIRE COMMUNICATIONS EQUIPMENT INSTALLATION AND MAINTENANCE</fullName>
            </value>
            <value>
                <fullName>2600 - ELECTRONIC EQUIPMENT INSTALLATION AND MAINTENANCE</fullName>
            </value>
            <value>
                <fullName>2800 - ELECTRICAL AND INSTALLATION AND MAINTENANCE</fullName>
            </value>
            <value>
                <fullName>3100 - FABRIC AND LEATHER WORK</fullName>
            </value>
            <value>
                <fullName>3300 - INSTRUMENT WORK</fullName>
            </value>
            <value>
                <fullName>3400 - MACHINE TOOL WORK</fullName>
            </value>
            <value>
                <fullName>3500 - GENERAL SERVICES AND SUPPORT WORK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>