force-app/main/default/objects/Occupational_Series__c/fields/Occupational_Series_Title__c.field-meta.xml
<CustomField>
    <fullName>Occupational_Series_Title__c</fullName>
    <description>Series Title only</description>
    <label>Occupational Series Title</label>
    <length>155</length>
    <type>Text</type>
</CustomField>