force-app/main/default/objects/Occupational_Series__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Occupational_Category__c</columns>
    <columns>Occupational_Group_or_Family__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>